--- a/tests/functest/CMakeLists.txt
+++ b/tests/functest/CMakeLists.txt
@@ -12,7 +12,7 @@ FetchContent_Declare(
         DOWNLOAD_EXTRACT_TIMESTAMP
         FALSE
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
+# For Windows: Prevent overriding the parent BigPrimes's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 enable_testing()
