--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ target_link_libraries(
         Boost::boost
 )
 
-add_subdirectory("tests/functest")
-add_subdirectory("tests/speedtest")
+# Uncomment to build tests
+#add_subdirectory("tests/functest")
+#add_subdirectory("tests/speedtest")
 add_subdirectory("example")
